[update]問い合わせ機能&レイアウト

--- a/app/views/members/comments/_index.html.erb
+++ b/app/views/members/comments/_index.html.erb
@@ -1,4 +1,3 @@
-
   <div class="h5"><i class="fas fa-comment-dots" style="color: black;"></i>
     <%= comments.count %>件
     <h6 class="more" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">コメントを全て表示する</h6>
@@ -16,9 +15,11 @@
           <div class="my-2"><%= comment.comment %></div>
           <div class="comment-date pull-right">
             <%= comment.created_at.strftime('%Y/%m/%d %H:%M') %>
-            <%= link_to request_comment_path(comment.request, comment),"data-confirm" => "削除しますか？",method: :delete,remote: true do  %>
+            <% if comment.member_id == current_member.id %>
+              <%= link_to request_comment_path(comment.request, comment),"data-confirm" => "削除しますか？",method: :delete,remote: true do  %>
               <i class="fas fa-trash" style="color: black;"></i>
-            <% end %>
+              <% end %>
+            <% end %>  
           </div>
         </div>
       </div>
@@ -39,9 +40,11 @@
           <div class="my-2"><%= comment.comment %></div>
           <div class="pull-right">
             <%= comment.created_at.strftime('%Y/%m/%d %H:%M') %>
-            <%= link_to request_comment_path(comment.request, comment),"data-confirm" => "削除しますか？",method: :delete,remote: true do  %>
+            <% if comment.member_id == current_member.id %>
+              <%= link_to request_comment_path(comment.request, comment),"data-confirm" => "削除しますか？",method: :delete,remote: true do  %>
               <i class="fas fa-trash" style="color: black;"></i>
-            <% end %>
+              <% end %>
+            <% end %>  
           </div>
         </div>
       </div>
