--- a/app/views/members/registrations/new.html.erb
+++ b/app/views/members/registrations/new.html.erb
@@ -27,18 +27,26 @@
       </div>
       <div class="mt-2">
         <div class="col-12"><%= f.label :生年月日 %></div>
-        <div class="col-12"><%= f.date_select :birthday, use_month_numbers: true,start_year: 1930, end_year: (Time.now.year - 10), default: Date.new(1989, 1, 1) , class:"form-control border-dark"%></div>
+        <div class="col-12">
+          <%= raw sprintf(f.date_select(:birthday,
+                  use_month_numbers: true,
+                  start_year:        1980,
+                  end_year:          Time.now.year,
+                  default:           Date.new(1989, 1, 1),
+                  date_separator:    '%s'), # 年月日区切りをそれぞれ指定
+                  '年 ', '月 ') + '日' %>
+        </div>
       </div>
       <div class="mt-2">
         <div class="col-12"><%= f.label :性別 ,class:"form-label" %></div>
         <div class="col-6"><%= f.collection_radio_buttons :sex,Member.sexes_i18n,:first,:last, autofocus: true,placeholder:"令和",class:"form-control border-dark" %></div>
-      </div>　
+      </div>
       <div class="mt-2">
         <%= f.submit "アカウント作成", class:"btn btn-outline-dark btn-block mt-3 "%>
       </div>
       <div class="text-center  mt-2 mb-3">
         <%= link_to "アカウントをお持ちの方", new_member_session_path ,class:"text-dark" %>
-      </div>  
+      </div>
     <% end %>
     </div>
   </div>
