--- a/app/views/members/requests/edit.html.erb
+++ b/app/views/members/requests/edit.html.erb
@@ -1,45 +1,45 @@
+<%= form_with model:@request,local:true do |f| %>
 <div class="container">
- <div class="row">
-   <h3 class="mt-5 mb-3">リクエスト情報編集</h3>
- </div>
-
- <%= form_with model:@request,local:true do |f| %>
- <div class="col-5">
- <div class="form-group row">
-  <lavel>タイトル</lavel>
-  <%= f.text_field :title ,class:"form-control" %>
- </div>
-
- <div class="form-group row ">
-  <lavel>予定日</lavel>
-  <%= f.date_field :schedule ,class:"form-control" %>
+  <div class="row mt-5 mb-3">
+    <div class="col-2">
+     <h5>投稿編集</h5>
+    </div> 
+    <div class="col-5">
+       <%=f.submit'編集保存',class:"btn btn-warning" %>
+    </div>
   </div>
 
-  <div class="form-group row ">
-  <lavel>場所</lavel>
-  <%=f.text_field :location ,class:"form-control" %>
-  </div>
-  
-    <div class="form-group row">
-   <lavel>タグ</lavel>
-   <%= f.text_field :caption, class:"form-control"%>
-   <small class="form-text text-muted">※1つずつに#(ハッシュ)を入力してください。(例:#タグ1#タグ2#タグ3)</small>
-  </div>
-  
-  <div class="form-group row">
-  <lavel>内容</lavel>
-  <%=f.text_area :content ,class:"form-control "%>
-  </div>
-
-  <div class="form-group row">
-  <lavel>状態</lavel>
-  <%=f.select :is_active ,Request.is_actives.keys.to_a, class:" custom-select" %>
-  </div>
- 
-  <div class="form-group row">
-  <%=f.submit'編集保存',class:"btn btn-warning" %>
-  </div>
-<% end %>
-  </div>
+  <div class="row">
+    <div class="col-5">
+      <div class="form-group">
+        <%= f.label :タイトル %>
+        <%= f.text_field :title ,class:"form-control" %>
+      </div>
+      <div class="form-group ">
+        <%= f.label :予定日 %>
+        <%= f.date_field :schedule ,class:"form-control" %>
+      </div>
+      <div class="form-group ">
+        <%= f.label :予定場所 %>
+        <%=f.text_field :location ,class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :タグ %>
+        <%= f.text_field :caption, class:"form-control"%>
+        <small class="form-text text-muted">※1つずつに#(ハッシュ)を入力してください。(例:#タグ1#タグ2#タグ3)</small>
+      </div>
+      <div class="form-group ">
+        <%= f.label :ステータス %>
+         <!--<#%=f.select :is_active ,(Request.is_actives_i18n.keys.to_a - @delete_at),{}, {class:" custom-select"} %>-->
+        <%=f.select :is_active ,(Request.is_actives_i18n.keys.to_a  - @delete_at).map{|k| [I18n.t("enum.request.is_active.#{k}"), k]},{}, {class:" custom-select"} %>
+      </div>
+    </div>
+    <div class="col-7">
+      <div class="form-group ">
+        <%= f.label :詳細 %>
+        <%= f.text_area :content ,rows:"12" , class:"form-control" %>
+      </div>
+    </div>
   </div>
 </div>
+<% end %>
