--- a/app/views/members/members/show.html.erb
+++ b/app/views/members/members/show.html.erb
@@ -28,7 +28,7 @@
            </tr>
            <tr>
              <th><%= "自己紹介" %></th>
-             <th><%= @member.introduction %></th>
+             <th><%= safe_join(@member.introduction.split("\n"),tag(:br)) %></th>
            </tr>
         </tbody>
       </table>
