--- a/app/views/members/relationships/followings.html.erb
+++ b/app/views/members/relationships/followings.html.erb
@@ -1,39 +1,47 @@
-<h2>フォロー中</h2>
 <!--フォロ中が存在するかの確認-->
 <% if @members.exists? %>
-<table class="table">
-<thead>
-  <tr>
-  <th>image</th>
-  <th>name</th>
-  <th colspan="3"></th>
-  </tr>
-</thead>
-
-<tbody>
-  <% @members.each do |member| %>
- <tr>
-  <td><%= link_to member_path(member) do %>
-        <%= attachment_image_tag member,:image,fallback: "noimage.jpg",size:"40x40" %>
-      <% end %>  
-  </td>
-  <td><%= member.nickname %></td>
-  <td>フォロー:<%= member.followings.count %></td>
-  <td>フォロワー：<%= member.followers.count %></td>
-  <td>
-   <% unless member == current_member %>
-     <%= render 'members/relationships/follow_button',member: member %>
-
-   <% end %>
-  </td>
-  
-</tr>  
-  <% end %>
-  
-</tbody>
-</table>
-
+<div class=container>
+  <div class="row mt-3">
+    <h2>フォロー中</h2>
+    <table class="table">
+      <thead>
+        <tr>
+          <th></th>
+          <th>name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+      <% @members.each do |member| %>
+        <tr>
+          <td>
+            <%= link_to member_path(member) do %>
+              <%= attachment_image_tag member,:image,fallback: "noimage.jpg",size:"40x40" %>
+            <% end %>
+          </td>
+          <td><%= member.nickname %></td>
+          <td>フォロー:<%= member.followings.count %></td>
+          <td>フォロワー：<%= member.followers.count %></td>
+          <td>
+            <% unless member == current_member %>
+              <%= render 'members/relationships/follow_button',member: member %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <% else %>
-<p>ユーザーはいません</p>
-
+<div class=container>
+  <div class="row mt-5 justify-content-center">
+    <div class="h3">フォロー中のユーザーがいません</div>
+  </div>
+  <div class="row mt-3 justify-content-center">
+    <div class="border-dark border-bottom"><%= link_to "ユーザーを探してみる",search_path, class:"text-dark " %>
+    <i class="fas fa-user-plus fa-lg "></i>
+    </div>
+  </div>
+</div>
 <% end %>
