--- a/app/views/members/requests/index.html.erb
+++ b/app/views/members/requests/index.html.erb
@@ -1,29 +1,38 @@
 <div class="container">
-  <div class="row mt-3">
+  <div class="row">
     <% @requests.each do |req| %>
     <% if req.is_active == "release" %>
     <div class="col-4 mt-3">
       <div class="card " style="min-width: 15rem;">
-        <div class="card-header"><%= req.title %></div>
-        <div class="card-body">
-          <div><%= req.schedule %></div>
-          <div><%= req.location %></div>
-          <div><%= req.is_active %></div>
-          <div class="text-right"><%= link_to "詳細を見る",request_path(req),class:"btn btn-outline-dark" %></div>
+        <div class="card-body text-center ">
+          <div><%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
+          <div class="border-bottom"><%= link_to req.member.nickname, member_path(req.member) ,class:"text-dark" %></div>
+          <table class="table table-borderless">
+            <tbody>
+              <tr>
+                <th><%= "タイトル " %></th>
+                <th><%= req.title.truncate(10) %></th>
+              </tr>
+              <tr>
+                <th><%= "予定日" %></th>
+                <th><%= req.schedule %></th>
+              </tr>
+              <tr>
+                <th><%= "場所" %></th>
+                <th><%= req.location %></th>
+              </tr>
+            </tbody>
+          </table>
         </div>
         <div class="card-footer">
-          <div>
-            <%= link_to member_path(req.member.id) do %>
-            <%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"35x35" ,class:"rounded-circle border border-dark"%>
-            <%= req.member.nickname %>
-            <% end %>
-          </div>
+          <%= link_to "詳細を見る",request_path(req),class:"btn btn-outline-dark btn-block" %>
         </div>
       </div>
     </div>
     <% end %>
     <% end %>
-
+  </div>
+</div>
   </div>
   <div class="row mt-5 mb-5 justify-content-center"> <%= paginate @requests %></div>
 </div>
