--- a/app/views/members/homes/top.html.erb
+++ b/app/views/members/homes/top.html.erb
@@ -1,11 +1,10 @@
-
-   <div class="container">
-    <div class="top-visual">
+<div class="container">
+  <div class="top-visual">
     <div class="row">
-      <div class="col-5 ml-auto">
-
-          
-      </div>
+      「趣味」で人生をもっと楽しく
+      <%= link_to "新規アカウント作成",new_member_registration_path, class: 'btn btn-danger' %>
+      <%= link_to "ログイン", new_member_session_path, class: 'btn btn-danger' %>
+      <%= link_to "管理者ログイン",admin_session_path, class: 'nav-link text-danger' %>
     </div>
   </div>
 </div>
