--- a/app/views/members/rooms/index.html.erb
+++ b/app/views/members/rooms/index.html.erb
@@ -1,29 +1,34 @@
-<div class="container">
+<div class="container mt-5">
+  <% if @rooms.exists? %>
   <div class="row mt-3">
     <table class="table table-hover table-inverse">
       <thead>
         <tr>
           <th>取引ID</th>
-          <th>投稿詳細へ</th>
-          <th>取引ユーザー名</th>
           <th>取引開始日</th>
+          <th>投稿詳細へ</th>
           <th>取引ページへ</th>
         </tr>
       </thead>
       <tbody>
         <% @rooms.each do |room| %>
-          <%# @entries.member.nickname |member| %>
           <% request = Request.find(room.request_id) %>
         <tr>
           <td><%=  room.room_id  %></td>
-          <td><%= link_to request.title, request_path(room.request_id),class:"btn btn-warning"  %></td>
-          <td></td>
+          <!--<td><#%= link_to @member.nickname, request_path(room.request_id),class:"btn btn-warning"  %></td>-->
           <td><%= room.created_at.strftime('%Y/%m/%d') %></td>
+          <td><%= link_to request.title, request_path(room.request_id),class:"btn btn-warning"  %></td>
           <td><%= link_to "チャットする", room_path(room.room_id),class:"btn btn-warning" %></td>
         </tr>
-          <%# end %>
         <% end %>
       </tbody>
     </table>
   </div>
+  <% else %>
+  <div class="row justify-content-center">
+    <div class="col-5 ">
+      <h4>取引はありません</h4>
+    </div>
+  </div> 
+  <% end %>
 </div>
