--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,20 +1,5 @@
 <div class="container">
   <div class="row ">
-   <div class="col-lg-3">
-    <h4 class="text-center"><%="TOP"%></h4>
-    <h5 class="text-center"><%= link_to "トップ",root_path %></h5>
-   </div>
-   <div class="col-lg-3">
-     <h4 class="text-center"><%= "ABOUT"%></h4>
-     <h5 class="text-center"><%= link_to "シェアホビについて",about_path %></h5>
-   </div>
-   <div class="col-lg-3">
-     <h4 class="text-center"><%= "GUIDE"%></h4>
-     <h5 class="text-center"><%= link_to "利用方法",guide_path %></h5>
-   </div>
-   <div class="col-lg-3">
-     <h4 class="text-center"><%="CONTACT"%></h4>
-     <h5 class="text-center"><%= link_to "問い合わせ",new_contact_path %></h5>
-   </div>
+    <div>株式会社</div>
   </div>
 </div>
