--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,23 @@
   </head>
 
   <body>
-    <% unless current_page?(new_member_registration_path) && (new_member_session_path) %>
     <header class="header">
-    
       <%= render 'layouts/header' %>
     </header>
-    <% end %>
+  
 
     <main class="main">
-      <%= flash[:error] %>
-      <%= yield %>
+      <div class="container" >
+        <div class="row">
+          <div class="col-2 mt-3 ">
+            <%= render 'layouts/sidebar' %>
+          </div>
+          <div class="offset-1 mt-3"></div>
+          <div class="col-8 mt-3">
+             <%= yield %> 
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="footer">
