--- a/app/views/members/notifications/index.html.erb
+++ b/app/views/members/notifications/index.html.erb
@@ -1,19 +1,20 @@
 <div class="container mt-5">
-  <div class="row text-right">
-    <h5 class="sub-title">通知</h5>
-    <%= link_to destroy_all_notifications_path, method: :delete do %>
-      <i class="fas fa-trash" style="color: black;"></i>
-      <h7 class="text-dark">全削除</h7>
-    <% end %>
-  </div>  
   <% if @notifications.exists? %>
   <div class="row justify-content-center">
-    <div class="col-5 ">
-    <%= render @notifications %>
+    <div class="col-7">
+      <%= link_to destroy_all_notifications_path, method: :delete, class: "text-right" do %>
+        <i class="fas fa-trash" style="color: black;"></i>
+        <h7 class="text-dark">全削除</h7>
+      <% end %>    
+      <%= render @notifications %>
+    </div>
+  </div>  
   <% else %>
-    <p>通知はありません</p>
-  <% end %>
+  <div class="row justify-content-center">
+    <div class="col-5 ">
+      <h4>通知はありません</h4>
     </div>
   </div>
-    <div class=" row justify-content-center mb-2"><%= paginate @notifications %></div>
+  <% end %>
+    <div class=" row justify-content-center mt-3 mb-2"><%= paginate @notifications %></div>
 </div>
