--- a/app/views/members/requests/edit.html.erb
+++ b/app/views/members/requests/edit.html.erb
@@ -1,11 +1,12 @@
 <%= form_with model:@request,local:true do |f| %>
-<div class="container">
+<div class="container mt-3">
   <div class="row mt-5 mb-3">
     <div class="col-2">
      <h5>投稿編集</h5>
     </div> 
-    <div class="col-5">
-       <%=f.submit'編集保存',class:"btn btn-warning" %>
+    <div class="offset-7"></div>
+    <div class="col-3 justify-content-end">
+       <input type="submit" value="&#xf064; 編集" class="fas fa-share　btn btn-lg btn-warning  btn-block">
     </div>
   </div>
 
@@ -17,7 +18,8 @@
       </div>
       <div class="form-group ">
         <%= f.label :予定日 %>
-        <%= f.date_field :schedule ,class:"form-control" %>
+        <%= f.date_field :schedule ,class:"form-control",min: Date.current , max: Date.current.since(3.months) %>
+        <small class="form-text text-muted">本日から3ヶ月後まで指定可能です。</small>
       </div>
       <div class="form-group ">
         <%= f.label :予定場所 %>
@@ -31,9 +33,10 @@
       <div class="form-group ">
         <%= f.label :ステータス %>
          <!--<#%=f.select :is_active ,(Request.is_actives_i18n.keys.to_a - @delete_at),{}, {class:" custom-select"} %>-->
-        <%=f.select :is_active ,(Request.is_actives_i18n.keys.to_a  - @delete_at).map{|k| [I18n.t("enum.request.is_active.#{k}"), k]},{}, {class:" custom-select"} %>
+        <%=f.select :is_active ,(Request.is_actives_i18n.keys.to_a  - @delete_at).map{|k| [I18n.t("enums.request.is_active.#{k}"), k]},{}, {class:" custom-select"} %>
       </div>
     </div>
+    
     <div class="col-7">
       <div class="form-group ">
         <%= f.label :詳細 %>
