--- a/app/views/members/requests/new.html.erb
+++ b/app/views/members/requests/new.html.erb
@@ -14,15 +14,16 @@
     <div class="col-5">
       <div class="form-group">
         <%= f.label :タイトル %>
-        <%= f.text_field :title ,class:"form-control" %>
+        <%= f.text_field :title ,placeholder:"例（DIY始めたいです！）" ,class:"form-control" %>
       </div>
       <div class="form-group ">
         <%= f.label :予定日 %>
-        <%= f.date_field :schedule ,class:"form-control" %>
+        <%= f.date_field :schedule ,class:"form-control",min: Date.current , max: Date.current.since(3.months)  %>
+        <small class="form-text text-muted">本日から3ヶ月後まで指定可能です。</small>
       </div>
       <div class="form-group ">
         <%= f.label :予定場所 %>
-        <%=f.text_field :location ,class:"form-control" %>
+        <%=f.text_field :location ,placeholder:"例（東京・梅田・〇〇公園）" ,class:"form-control" %>
       </div>
       <div class="form-group">
         <%= f.label :タグ %>
@@ -33,7 +34,7 @@
     <div class="col-7">
       <div class="form-group ">
         <%= f.label :詳細 %>
-        <%= f.text_area :content ,rows:"12" , class:"form-control" %>
+        <%= f.text_area :content ,rows:"13" ,placeholder:"（詳しく記入するとマッチングしやすくなります）" , class:"form-control" %>
       </div>
     </div>
   </div>
