--- a/app/views/members/searches/search.html.erb
+++ b/app/views/members/searches/search.html.erb
@@ -1,10 +1,9 @@
 <% if @model != "Request" %>
-<div class="container">
+<div class="container mt-3 px-0">
   <div class="row">
     <% @members.each do |member| %>
-    <% if member != current_member %>
-    <div class="col-4 mt-3">
-      <div class="card " style="min-width: 15rem;">
+    <div class="col-6 mt-3">
+      <div class="card " style="width: 20rem;">
         <div class="card-body text-center ">
            <div><%= attachment_image_tag member, :image, fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
           <div class="border-bottom"><%= link_to member.nickname, member_path(member) ,class:"text-dark" %></div>
@@ -31,17 +30,15 @@
       </div>
     </div>
     <% end %>
-    <% end %>
   </div>
-   <div class="row mt-5 mb-5 justify-content-center"> <%= paginate @members %></div>
+   <div class="row mt-3 mb-3 justify-content-center"> <%= paginate @members %></div>
 </div>
 <% else %>
-<div class="container">
+<div class="container mt-3 px-0">
   <div class="row">
     <% @requests.each do |req| %>
-    <% if req.is_active == "release" &&  req.member != current_member %>
-    <div class="col-4 mt-3">
-      <div class="card " style="min-width: 15rem;">
+    <div class="col-6 mt-3">
+      <div class="card " style="width: 20rem;">
         <div class="card-body text-center ">
           <div><%= attachment_image_tag req.member, :image, fallback: "noimage.jpg",size:"50x50" ,class:"rounded-circle border border-dark"%></div>
           <div class="border-bottom"><%= link_to req.member.nickname, member_path(req.member) ,class:"text-dark" %></div>
@@ -49,7 +46,7 @@
             <tbody>
               <tr>
                 <th><%= "タイトル " %></th>
-                <th><%= req.title.truncate(10) %></th>
+                <th><%= req.title.truncate(15) %></th>
               </tr>
               <tr>
                 <th><%= "予定日" %></th>
@@ -57,7 +54,7 @@
               </tr>
               <tr>
                 <th><%= "場所" %></th>
-                <th><%= req.location %></th>
+                <th><%= req.location.truncate(15) %></th>
               </tr>
             </tbody>
           </table>
@@ -68,9 +65,8 @@
       </div>
     </div>
     <% end %>
-    <% end %>
   </div>
-  <div class="row mt-5 mb-5 justify-content-center"> <%= paginate @requests %></div>
+  <div class="row mt-3 mb-3 justify-content-center"> <%= paginate @requests %></div>
 </div>
 <% end %>
 
